Tweak .language colors
for language .storage, .control, .primitive, .keyword
  - use orange instead of red

for language .constant
  - use blue instead of purple

--- a/styles/language.less
+++ b/styles/language.less
@@ -22,10 +22,10 @@
 }
 
 .keyword {
-  color: @gruvbox-bright-red;
+  color: @gruvbox-bright-orange;
 
   &.control {
-    color: @gruvbox-bright-red;
+    color: @gruvbox-bright-orange;
   }
 
   &.operator {
@@ -42,12 +42,12 @@
 }
 
 .storage {
-  color: @gruvbox-bright-red;
+  color: @gruvbox-bright-orange;
 
   &.type {
     &.annotation,
     &.primitive {
-      color: @gruvbox-bright-red;
+      color: @gruvbox-bright-orange;
     }
   }
 
@@ -60,7 +60,7 @@
 }
 
 .constant {
-  color: @gruvbox-bright-purple;
+  color: @gruvbox-bright-blue;
 
   &.variable {
     color: @gruvbox-bright-purple;
@@ -178,7 +178,7 @@
 
 .entity {
   &.name.function {
-    color: @gruvbox-bright-green;
+    color: @gruvbox-bright-yellow;
   }
 
   &.name.class,
